# gamestream-hackathon

./: .gitignore  docker-compose.yaml
frontend/src/: App.css  App.js
frontend/src/axios/: axios.js
gateway/: .dockerignore  Dockerfile  alembic.ini  compare.py  database.py  entrypoint.sh  logger.py  logging.ini  main.py  pyproject.toml
gateway/migration/: env.py
gateway/migration/versions/: 056b0db60249_initial.py  d4969252c55e_initial.py
gateway/proto/: proto_pb2.py  proto_pb2.pyi  proto_pb2_grpc.py
minio-storage/.minio.sys/: format.json
proc/: Dockerfile  Makefile  config.yaml  go.mod  go.sum  main.go
proc/pb/: proto.pb.go  proto_grpc.pb.go
proc/pb/log/: proto.pb.go  proto_grpc.pb.go
proto/: proto.proto
