[tool.poetry]
name = "gateway"
version = "0.1.0"
description = ""
authors = ["JustPC <robert49324@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
grpcio = "^1.62.2"
uvicorn = "^0.29.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
