[tool.poetry]
name = "gateway"
version = "0.1.0"
description = ""
authors = ["JustPC <robert49324@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
grpcio = "^1.62.2"
uvicorn = "^0.29.0"
python-multipart = "^0.0.9"
protobuf = "^5.26.1"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"
logging = "^0.4.9.6"
opencv-python = "^4.9.0.80"
scikit-image = "^0.23.2"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
